--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --inline --hot",
-    "production": "webpack --progress -p" 
+    "production": "webpack --progress -p"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,10 @@
     "react-redux-toastr": "^4.4.2",
     "react-router": "^3.0.2",
     "redux": "^3.7.1",
+    "redux-form": "^7.0.3",
+    "redux-multi": "^0.1.12",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
